[package]
name = "asynchronous-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
governor = "0.6.0"
nonzero_ext = "0.3.0"
rand = "0.8.5"
tokio = { version = "1.33.0", features = ["full"] }

